BugzID:1637 - Added initial data controller model.